--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -2,50 +2,75 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Bitter', serif;
+    h2{
+        font-size: 1.2rem;
+    }
+    p{
+        font-size: .9rem;
+    }
 }
 
 #root{
-    background: linear-gradient(rgba(5,7,12,.75),rgba(5,7,12,.75)), url("../../public/imagenes/fondoHome.jpg");
+    background: #15171B;
     background-size: cover;
 }
 
 header{
     display: grid;
-    grid-template-columns: 70% 30%;
+    grid-template-columns: 33% 33% 33%;
     place-content: center;
-    height: 100px;
-    background-color: rgba(0, 0, 0, 0.808);
+    min-height: 100px;
+    background-color: rgb(0, 0, 0);
     color: darkgrey;
     border-bottom: solid 2px black;
+    position: sticky;
+    top: 0;
     .titulo-header{
         color: darkgrey;
         text-decoration: none;
-        width: 20%;
         display: grid;
         place-content: center;
         h2{
-            margin-left: 1rem;
             text-transform: uppercase;
+
         }
     }
     .titulo-header:hover{
         color:gray;
     }
+    .busqueda{
+        display: grid;
+        place-content: center;
+        color: darkgray;
+        text-decoration: none;
+        text-transform: uppercase;
+        i{
+            margin-right: .3rem;
+        }
+    }
+    .busqueda:hover{
+        color: gray;
+    }
     nav{
         display: grid;
+        padding-right: 1rem;
         ul{
             display: flex;
-            justify-content: space-around;
+            flex-direction: column;
             align-items: center;
             li{
                 list-style: none;
                 display: grid;
                 place-content: center;
+                margin-bottom: .5rem;
             }
         }
         a{
             color: darkgrey;
             text-decoration: none;
+            text-transform: uppercase;
+            font-size: .8rem;
         }
         a:hover{
             color:gray;
@@ -55,14 +80,16 @@ header{
 
 main{
     .home-fondo{
-        padding: 1rem;
         padding-top: 2rem;
-        min-height: 84vh;
+        min-height: 90vh ;
+        background: linear-gradient(rgba(5,7,12,.75),rgba(5,7,12,.75)), url("../../public/imagenes/fondoHome.jpg");
         background-size: cover;
+
         h1{
             color:darkgrey;
             text-align: center;
             text-transform: uppercase;
+            font-size: 1.3rem;
         }
         .explicacion{
             margin: 1rem;
@@ -78,30 +105,39 @@ main{
         .div-form{
             display: grid;
             place-content: center;
-            margin: 2rem;
+            margin: 2rem 0;
             form{
                 display: grid;
                 grid-template-columns: repeat(1,1fr);
                 input{
                     padding: 0.3rem;
                     margin-bottom: 0.5rem;
+                    border-radius: 5px;
+                    border: solid 1px black;
                 }
                 button{
+                    margin: 0.3rem;
+                    border: solid 1px black;
+                    background-color: gray;
                     padding: 0.3rem;
+                    border-radius: 5px;
+                    cursor: pointer;
                 }
             }
         }
         .div-peliculas{
             display: grid;
-            grid-template-columns: repeat(4,1fr);
+            grid-template-columns: repeat(1,.5fr);
+            place-content: center;
             .informacion-pelicula{
                 text-align: center;
                 display: grid;
                 place-content: center;
-                background-color: darkgreen;
+                background-color: rgba(0, 0, 0, 0.808);
+                color: gray;
                 padding: 1rem;
                 border-radius: 5px;
-                box-shadow: 10px 10px 10px 10px;
+                box-shadow: 0px 0px 10px 10px;
                 p{
                     margin-bottom: .5rem;
                 }
@@ -123,6 +159,7 @@ main{
                     button{
                         margin: 0.3rem;
                         border: solid 1px black;
+                        background-color: gray;
                         padding: 0.3rem;
                         border-radius: 5px;
                         cursor: pointer;
@@ -132,4 +169,178 @@ main{
         }
     }
 
+    .peliculas-fondo{
+        min-height: 100vh;
+        .contenedor-div-peliculas-menu{
+            margin: 3rem 2rem 2rem 4rem;
+            h2{
+                color: darkgray;
+            }
+            .div-peliculas-menu{
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                .div-info-pelicula-menu{
+                    text-align: center;
+                    margin: 1rem;
+                    display: grid;
+                    place-content: center;
+                    width: 300px;
+                    .img{
+                        img{
+                            width: 250px;
+                            height: 250px;
+                            margin-bottom: .6rem;
+                            // height: 100%;
+                            // object-fit: cover;
+                            // width: 100%;
+                            // z-index: -2;
+                            // left: 0;
+                            // position: absolute;
+                            // top: 0;
+                        }
+                    }
+                    .txt{
+                        h4{
+                            text-transform: uppercase;
+                            color: darkgray;
+                            margin-bottom: 0.6rem;
+                        }
+                        button{
+                            background-color: red;
+                            color: white;
+                            border: none;
+                            padding: .5rem;
+                            width: 150px;
+                            margin: auto;
+                            cursor: pointer;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+footer{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    text-align: center;
+    color: darkgray;
+    background-color: rgb(0, 0, 0);
+    border-top: solid 2px black;
+    div{
+        margin: 1.5rem;
+        h5{
+            text-transform: uppercase;
+        }
+    }
+    .texto{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        ul{
+            display: grid;
+            place-content: center;
+            grid-template-columns: repeat(3,.2fr);
+            list-style: none;
+            margin-bottom: 1rem;
+        }
+    }
+    .redes{
+        ul{
+            display: grid;
+            grid-template-columns: repeat(3,.2fr);
+            place-content: center;
+            list-style: none;
+            margin-top: 1rem;
+            li{
+                i{
+                    font-size: 1.2rem;
+                    background-color: #303030;
+                    padding: 8px;
+                    border-radius: 100%;
+                }
+            }
+        }
+    }
+    .app{
+        ul{
+            display: grid;
+            grid-template-columns: repeat(2,.2fr);
+            place-content: center;
+            list-style: none;
+            margin-top: 1rem;
+            li{
+                i{
+                    font-size: 1.2rem;
+                    background-color: #303030;
+                    padding: 8px;
+                    border-radius: 100%;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width:992px){
+
+    *{
+        h2{
+            font-size: 1.6rem;
+        }
+        p{
+            font-size: 1rem;
+        }
+    }
+
+    header{
+        nav{
+            ul{
+                flex-direction: row;
+                justify-content: space-around;
+                padding-top: .6rem;
+            }
+            a{
+                font-size: 1rem;
+            }
+        }
+    }
+    main{
+        .home-fondo{
+            h1{
+                font-size: 1.8rem;
+            }
+            
+            .div-peliculas{
+                grid-template-columns: repeat(2,.4fr);
+                .informacion-pelicula{
+                    max-width: 500px;
+                }
+            }
+        }
+
+    }
+    footer{
+        grid-template-columns: 50% 25% 25%;
+    }
+}
+
+@media (min-width:1200px){
+    main{
+        .home-fondo{
+            .div-form{
+                form{
+                    input{
+                        width: 300px;
+                        padding: .6rem;
+                        font-size: 1rem;
+                    }
+                    button{
+                        font-size: 1rem;
+                        padding: .4rem;
+                    }
+                }
+            }
+        }
+    }
 }
