--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -32,6 +32,7 @@ header {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 10;
 }
 
 header .titulo-header {
@@ -108,8 +109,6 @@ header nav a:hover {
 main .home-fondo {
   padding-top: 2rem;
   min-height: 90vh;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(5, 7, 12, 0.75)), to(rgba(5, 7, 12, 0.75))), url("../../public/imagenes/fondoHome.jpg");
-  background: linear-gradient(rgba(5, 7, 12, 0.75), rgba(5, 7, 12, 0.75)), url("../../public/imagenes/fondoHome.jpg");
   background-size: cover;
 }
 
@@ -164,11 +163,16 @@ main .home-fondo .div-form form button {
 }
 
 main .home-fondo .div-peliculas {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (0.5fr)[1];
-      grid-template-columns: repeat(1, 0.5fr);
-  place-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
 }
 
 main .home-fondo .div-peliculas .informacion-pelicula {
@@ -182,6 +186,10 @@ main .home-fondo .div-peliculas .informacion-pelicula {
   border-radius: 5px;
   -webkit-box-shadow: 0px 0px 10px 10px;
           box-shadow: 0px 0px 10px 10px;
+}
+
+main .home-fondo .div-peliculas .informacion-pelicula h3 {
+  text-transform: uppercase;
 }
 
 main .home-fondo .div-peliculas .informacion-pelicula p {
@@ -204,19 +212,20 @@ main .home-fondo .div-peliculas .informacion-pelicula .div-imagen img {
 }
 
 main .home-fondo .div-peliculas .informacion-pelicula .botones {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
-  place-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: 5px;
+          column-gap: 5px;
 }
 
 main .home-fondo .div-peliculas .informacion-pelicula .botones button {
-  margin: 0.3rem;
-  border: solid 1px black;
-  background-color: gray;
-  padding: 0.3rem;
-  border-radius: 5px;
+  background-color: red;
+  color: white;
+  border: none;
+  padding: .5rem;
+  width: 150px;
+  margin: auto;
   cursor: pointer;
 }
 
@@ -230,6 +239,7 @@ main .peliculas-fondo .contenedor-div-peliculas-menu {
 
 main .peliculas-fondo .contenedor-div-peliculas-menu h2 {
   color: darkgray;
+  margin-bottom: .6rem;
 }
 
 main .peliculas-fondo .contenedor-div-peliculas-menu .div-peliculas-menu {
@@ -250,6 +260,8 @@ main .peliculas-fondo .contenedor-div-peliculas-menu .div-peliculas-menu .div-in
   display: grid;
   place-content: center;
   width: 300px;
+  -webkit-transition: all 300ms;
+  transition: all 300ms;
 }
 
 main .peliculas-fondo .contenedor-div-peliculas-menu .div-peliculas-menu .div-info-pelicula-menu .img img {
@@ -272,6 +284,11 @@ main .peliculas-fondo .contenedor-div-peliculas-menu .div-peliculas-menu .div-in
   width: 150px;
   margin: auto;
   cursor: pointer;
+}
+
+main .peliculas-fondo .contenedor-div-peliculas-menu .div-peliculas-menu .div-info-pelicula-menu:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 footer {
@@ -365,10 +382,6 @@ footer .app ul li i {
   }
   main .home-fondo h1 {
     font-size: 1.8rem;
-  }
-  main .home-fondo .div-peliculas {
-    -ms-grid-columns: (0.4fr)[2];
-        grid-template-columns: repeat(2, 0.4fr);
   }
   main .home-fondo .div-peliculas .informacion-pelicula {
     max-width: 500px;
