--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -26,6 +26,7 @@ header{
     border-bottom: solid 2px black;
     position: sticky;
     top: 0;
+    z-index: 10;
     .titulo-header{
         color: darkgrey;
         text-decoration: none;
@@ -33,7 +34,6 @@ header{
         place-content: center;
         h2{
             text-transform: uppercase;
-
         }
     }
     .titulo-header:hover{
@@ -82,7 +82,7 @@ main{
     .home-fondo{
         padding-top: 2rem;
         min-height: 90vh ;
-        background: linear-gradient(rgba(5,7,12,.75),rgba(5,7,12,.75)), url("../../public/imagenes/fondoHome.jpg");
+        // background: linear-gradient(rgba(5,7,12,.75),rgba(5,7,12,.75)), url("../../public/imagenes/fondoHome.jpg");
         background-size: cover;
 
         h1{
@@ -126,9 +126,10 @@ main{
             }
         }
         .div-peliculas{
-            display: grid;
-            grid-template-columns: repeat(1,.5fr);
-            place-content: center;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            flex-wrap: nowrap;
             .informacion-pelicula{
                 text-align: center;
                 display: grid;
@@ -138,6 +139,9 @@ main{
                 padding: 1rem;
                 border-radius: 5px;
                 box-shadow: 0px 0px 10px 10px;
+                h3{
+                    text-transform: uppercase;
+                }
                 p{
                     margin-bottom: .5rem;
                 }
@@ -153,15 +157,15 @@ main{
                     }
                 }
                 .botones{
-                    display: grid;
-                    grid-template-columns: repeat(2,1fr);
-                    place-content: center;
+                    display: flex;
+                    column-gap: 5px;
                     button{
-                        margin: 0.3rem;
-                        border: solid 1px black;
-                        background-color: gray;
-                        padding: 0.3rem;
-                        border-radius: 5px;
+                        background-color: red;
+                        color: white;
+                        border: none;
+                        padding: .5rem;
+                        width: 150px;
+                        margin: auto;
                         cursor: pointer;
                     }
                 }
@@ -174,7 +178,8 @@ main{
         .contenedor-div-peliculas-menu{
             margin: 3rem 2rem 2rem 4rem;
             h2{
-                color: darkgray;
+                color: rgb(169, 169, 169);
+                margin-bottom: .6rem;
             }
             .div-peliculas-menu{
                 display: flex;
@@ -186,18 +191,12 @@ main{
                     display: grid;
                     place-content: center;
                     width: 300px;
+                    transition: all 300ms;
                     .img{
                         img{
                             width: 250px;
                             height: 250px;
                             margin-bottom: .6rem;
-                            // height: 100%;
-                            // object-fit: cover;
-                            // width: 100%;
-                            // z-index: -2;
-                            // left: 0;
-                            // position: absolute;
-                            // top: 0;
                         }
                     }
                     .txt{
@@ -216,6 +215,9 @@ main{
                             cursor: pointer;
                         }
                     }
+                }
+                .div-info-pelicula-menu:hover{
+                    transform: scale(1.10);
                 }
             }
         }
@@ -312,7 +314,6 @@ footer{
             }
             
             .div-peliculas{
-                grid-template-columns: repeat(2,.4fr);
                 .informacion-pelicula{
                     max-width: 500px;
                 }
