--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -108,7 +108,7 @@ header nav a:hover {
 
 main .home-fondo {
   padding-top: 2rem;
-  min-height: 90vh;
+  min-height: 100vh;
   background-size: cover;
 }
 
@@ -149,8 +149,10 @@ main .home-fondo .div-form form {
 main .home-fondo .div-form form input {
   padding: 0.3rem;
   margin-bottom: 0.5rem;
-  border-radius: 5px;
-  border: solid 1px black;
+  border: none;
+  border-bottom: solid 1px darkgray;
+  background: none;
+  color: darkgray;
 }
 
 main .home-fondo .div-form form button {
@@ -246,28 +248,47 @@ main .peliculas-fondo .contenedor-div-peliculas-menu .div-peliculas-menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 main .peliculas-fondo .contenedor-div-peliculas-menu .div-peliculas-menu .div-info-pelicula-menu {
   text-align: center;
-  margin: 1rem;
   display: -ms-grid;
   display: grid;
   place-content: center;
-  width: 300px;
+  width: 250px;
   -webkit-transition: all 300ms;
   transition: all 300ms;
+  -webkit-transition-delay: .3s;
+          transition-delay: .3s;
 }
 
 main .peliculas-fondo .contenedor-div-peliculas-menu .div-peliculas-menu .div-info-pelicula-menu .img img {
   width: 250px;
-  height: 250px;
+  height: 150px;
   margin-bottom: .6rem;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+main .peliculas-fondo .contenedor-div-peliculas-menu .div-peliculas-menu .div-info-pelicula-menu .txt {
+  visibility: hidden;
+  -webkit-transition: all 300ms;
+  transition: all 300ms;
+  -webkit-transition-delay: .3s;
+          transition-delay: .3s;
+  padding: 0 10px 10px 10px;
 }
 
 main .peliculas-fondo .contenedor-div-peliculas-menu .div-peliculas-menu .div-info-pelicula-menu .txt h4 {
@@ -287,8 +308,21 @@ main .peliculas-fondo .contenedor-div-peliculas-menu .div-peliculas-menu .div-in
 }
 
 main .peliculas-fondo .contenedor-div-peliculas-menu .div-peliculas-menu .div-info-pelicula-menu:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  -webkit-transform: scale(1.25);
+          transform: scale(1.25);
+  -webkit-box-shadow: 0 0 5px 5px black;
+          box-shadow: 0 0 5px 5px black;
+  border-radius: 10px;
+  z-index: 2;
+}
+
+main .peliculas-fondo .contenedor-div-peliculas-menu .div-peliculas-menu .div-info-pelicula-menu:hover .img img {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+main .peliculas-fondo .contenedor-div-peliculas-menu .div-peliculas-menu .div-info-pelicula-menu:hover .txt {
+  visibility: visible;
 }
 
 footer {
@@ -300,6 +334,7 @@ footer {
   color: darkgray;
   background-color: black;
   border-top: solid 2px black;
+  margin-top: 2rem;
 }
 
 footer div {
@@ -385,6 +420,10 @@ footer .app ul li i {
   }
   main .home-fondo .div-peliculas .informacion-pelicula {
     max-width: 500px;
+  }
+  main .peliculas-fondo .contenedor-div-peliculas-menu .div-peliculas-menu {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
   }
   footer {
     -ms-grid-columns: 50% 25% 25%;
