--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -81,7 +81,7 @@ header{
 main{
     .home-fondo{
         padding-top: 2rem;
-        min-height: 90vh ;
+        min-height: 100vh ;
         // background: linear-gradient(rgba(5,7,12,.75),rgba(5,7,12,.75)), url("../../public/imagenes/fondoHome.jpg");
         background-size: cover;
 
@@ -112,8 +112,10 @@ main{
                 input{
                     padding: 0.3rem;
                     margin-bottom: 0.5rem;
-                    border-radius: 5px;
-                    border: solid 1px black;
+                    border: none;
+                    border-bottom: solid 1px darkgray;
+                    background: none;
+                    color: darkgray;
                 }
                 button{
                     margin: 0.3rem;
@@ -130,6 +132,8 @@ main{
             justify-content: space-around;
             align-items: center;
             flex-wrap: nowrap;
+            // margin-bottom: 3.5rem;
+            // margin-top: 1.5rem;
             .informacion-pelicula{
                 text-align: center;
                 display: grid;
@@ -183,23 +187,33 @@ main{
             }
             .div-peliculas-menu{
                 display: flex;
+                flex-direction: row;
                 flex-wrap: wrap;
-                justify-content: space-between;
+                justify-content: center;
+                align-items: center;
                 .div-info-pelicula-menu{
                     text-align: center;
-                    margin: 1rem;
                     display: grid;
                     place-content: center;
-                    width: 300px;
+                    width: 250px;
                     transition: all 300ms;
+                    transition-delay: .3s;
                     .img{
                         img{
                             width: 250px;
-                            height: 250px;
+                            height: 150px;
+                            // object-fit: cover;
                             margin-bottom: .6rem;
+                            border-radius: 5px;
+                            cursor: pointer;
                         }
                     }
                     .txt{
+                        visibility: hidden;
+                        transition: all 300ms;
+                        transition-delay: .3s;
+                        padding: 0 10px 10px 10px;
+
                         h4{
                             text-transform: uppercase;
                             color: darkgray;
@@ -217,7 +231,19 @@ main{
                     }
                 }
                 .div-info-pelicula-menu:hover{
-                    transform: scale(1.10);
+                    transform: scale(1.25);
+                    box-shadow: 0 0 5px 5px black;
+                    border-radius: 10px;
+                    z-index: 2;
+                    .img{
+                        img{
+                            border-bottom-left-radius: 0;
+                            border-bottom-right-radius: 0;
+                        }
+                    }
+                    .txt{
+                        visibility: visible;
+                    }
                 }
             }
         }
@@ -231,6 +257,7 @@ footer{
     color: darkgray;
     background-color: rgb(0, 0, 0);
     border-top: solid 2px black;
+    margin-top: 2rem;
     div{
         margin: 1.5rem;
         h5{
@@ -316,6 +343,14 @@ footer{
             .div-peliculas{
                 .informacion-pelicula{
                     max-width: 500px;
+                }
+            }
+        }
+
+        .peliculas-fondo{
+            .contenedor-div-peliculas-menu{
+                .div-peliculas-menu{
+                    justify-content: space-around;
                 }
             }
         }
