--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -99,13 +99,38 @@ main .home-fondo {
   padding-top: 2rem;
   min-height: 100vh;
   background-size: cover;
+  text-align: center;
 }
 
-main .home-fondo h1 {
+main .home-fondo h2 {
   color: darkgrey;
   text-align: center;
   text-transform: uppercase;
   font-size: 1.3rem;
+}
+
+main .home-fondo h3 {
+  color: darkgrey;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+main .home-fondo .comienza {
+  text-decoration: none;
+  margin: 0.3rem;
+  border: solid 1px black;
+  color: #15171B;
+  background-color: gray;
+  padding: 0.3rem;
+  border-radius: 5px;
+  cursor: pointer;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+}
+
+main .home-fondo .comienza:hover {
+  color: gray;
+  background-color: #303030;
 }
 
 main .home-fondo .explicacion {
@@ -151,6 +176,13 @@ main .home-fondo .div-form form button {
   padding: 0.3rem;
   border-radius: 5px;
   cursor: pointer;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+}
+
+main .home-fondo .div-form form button:hover {
+  color: gray;
+  background-color: #303030;
 }
 
 main .home-fondo .div-peliculas {
@@ -432,7 +464,7 @@ footer .app ul li i {
   header nav a {
     font-size: 1rem;
   }
-  main .home-fondo h1 {
+  main .home-fondo h2 {
     font-size: 1.8rem;
   }
   main .home-fondo .div-peliculas .informacion-pelicula {
