--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -85,13 +85,38 @@ main{
         min-height: 100vh ;
         // background: linear-gradient(rgba(5,7,12,.75),rgba(5,7,12,.75)), url("../../public/imagenes/fondoHome.jpg");
         background-size: cover;
+        text-align: center;
 
-        h1{
+        h2{
             color:darkgrey;
             text-align: center;
             text-transform: uppercase;
             font-size: 1.3rem;
         }
+
+        h3{
+            color:darkgrey;
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+
+        .comienza{
+            text-decoration: none;
+            margin: 0.3rem;
+            border: solid 1px black;
+            color: #15171B;
+            background-color: gray;
+            padding: 0.3rem;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: all .5s ;
+        }
+
+        .comienza:hover{
+            color: gray;
+            background-color: #303030;
+        }
+
         .explicacion{
             margin: 1rem;
             color: darkgrey;
@@ -125,6 +150,12 @@ main{
                     padding: 0.3rem;
                     border-radius: 5px;
                     cursor: pointer;
+                    transition: all .5s;
+                }
+
+                button:hover{
+                    color: gray;
+                    background-color: #303030;
                 }
             }
         }
@@ -362,7 +393,7 @@ footer{
     }
     main{
         .home-fondo{
-            h1{
+            h2{
                 font-size: 1.8rem;
             }
             
